refactor into separate project

--- a/CHIP-8 Emulator/CHIP-8 Emulator.csproj
+++ b/CHIP-8 Emulator/CHIP-8 Emulator.csproj
@@ -13,4 +13,8 @@
     <Folder Include="IO\Screen\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Emulator\CHIP-8.Emulator.csproj" />
+  </ItemGroup>
+
 </Project>
